--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,9 @@ services:
     # and fill the args values with the output of the commands on the right
     build:
        args:
-         GROUPID: # id -g
-         GROUPNAME: # id -gn
-         USERID: # id -u
+         GROUPID: 197609# id -g
+         GROUPNAME: 197609# id -gn
+         USERID: 197609# id -u
          USERNAME: # echo $USER
     ports:
       - 8080:8080
