--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,12 @@ services:
     # uncomment these if you are having this issue with the build:
     #/usr/local/bundle/gems/jekyll-4.3.4/lib/jekyll/site.rb:509:in `initialize': Permission denied @ rb_sysopen - /srv/jekyll/.jekyll-cache/.gitignore (Errno::EACCES)
     # and fill the args values with the output of the commands on the right
-    build:
-       args:
-         GROUPID: 197609# id -g
-         GROUPNAME: 197609# id -gn
-         USERID: 197609# id -u
-         USERNAME: # echo $USER
+    # build:
+    #    args:
+    #      GROUPID: 197609# id -g
+    #      GROUPNAME: 197609# id -gn
+    #      USERID: 197609# id -u
+    #      USERNAME: # echo $USER
     ports:
       - 8080:8080
       - 35729:35729
